[project]
name = "oop-vendingmachine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Conrad Storz", email = "conradstorz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
oop-vendingmachine = "oop_vendingmachine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
